Alteração na noticia

--- a/noticias.html
+++ b/noticias.html
@@ -28,9 +28,8 @@
     </header>
         <hr>
         <main>
-        <h3>A previsão do tempo diz que o Gabriel está apaixonado</h3>
-        <p>Viu Geovanna o que você fez comigo, estou programando site e colocando você, quero 1 real por cada hora que fiquei programando esse site, aff, e mais uma só pra encerrar - "GOSTOSA DO CARRRRRRRRRRRRRRRRRRRALHOO"</p>
-        <img src="geovanna.jpg" alt="Geovanna">
+        <h3>Androids Notícias</h3>
+        <p>Segundo Elon Musk a programação é a profissão do futuro e isso vem fazendo muitas pessoas a entrar nessa área de programação</p>
     </main>
     
 </body>
