--- a/index.html.html
+++ b/index.html.html
@@ -86,7 +86,7 @@
 </main>
 
 <footer>
-    <p>Desenvolvido por <a href="https://github.com/Gabrielfull" target="_blank" rel="external">Gabriel Adriano</a></p>
+    <p>Desenvolvido por <a href="https://github.com/Gabrielfull" target="_blank" rel="external">Gabriel Adrianof</a></p>
 </footer>
     
 </body>
