--- a/index.html.html
+++ b/index.html.html
@@ -14,8 +14,8 @@
     </header>
 
 <nav>
-    <a href="home.html">Home</a>
-    <a href="noticias.html">Notícias</a>
+    <a href="#">Home</a>
+    <a href="#">Notícias</a>
     <a href="#">Contato</a>
 </nav>
 
